# django-crud

./: README.md  db.sqlite3  pyproject.toml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
templates/: base.html  blog_create.html  blog_delete.html  blog_details.html  blog_update.html  blogs.html
